<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballmatch.MainActivity">

    <TextView
        android:id="@+id/home_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/home_team_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/away_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/away_team_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_team_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_team_name"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/away_team_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/away_team_name"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/home_team_score_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/home_team_image"
        app:layout_constraintRight_toRightOf="@+id/home_team_image"
        app:layout_constraintTop_toBottomOf="@+id/home_team_image" />

    <TextView
        android:textSize="24sp"
        android:id="@+id/away_team_score_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/initial_score"
        app:layout_constraintLeft_toLeftOf="@+id/away_team_image"
        app:layout_constraintRight_toRightOf="@+id/away_team_image"
        app:layout_constraintTop_toBottomOf="@+id/away_team_image" />

    <TextView
        android:id="@+id/announcement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/announcements"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_team_score_result" />

    <Button
        android:id="@+id/home_team_score_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/initial_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcement"
        android:onClick="homeTeamScores"/>

    <TextView
        android:id="@+id/goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_scores"
        app:layout_constraintBottom_toBottomOf="@+id/home_team_score_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/home_team_score_button"
        app:layout_constraintRight_toLeftOf="@+id/away_team_score_button"
        app:layout_constraintTop_toTopOf="@+id/home_team_score_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/away_team_score_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/initial_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcement"
        android:onClick="awayTeamScores"/>

    <Button
        android:id="@+id/home_shots_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_team_score_button"
        android:onClick="homeTeamShots"/>

    <TextView
        android:id="@+id/shots_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shots"
        app:layout_constraintBottom_toBottomOf="@+id/home_shots_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/home_shots_button"
        app:layout_constraintRight_toLeftOf="@+id/away_shots_button"
        app:layout_constraintTop_toTopOf="@+id/home_shots_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/away_shots_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/away_team_score_button"
        android:onClick="awayTeamShots"/>

    <Button
        android:id="@+id/home_yellow_cards_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_shots_button"
        android:onClick="homeTeamReceivesYellowCard"/>

    <TextView
        android:id="@+id/yellow_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow_card"
        app:layout_constraintBottom_toBottomOf="@+id/home_yellow_cards_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/home_yellow_cards_button"
        app:layout_constraintRight_toLeftOf="@+id/away_yellow_cards_button"
        app:layout_constraintTop_toTopOf="@+id/home_yellow_cards_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/away_yellow_cards_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/away_shots_button"
        android:onClick="awayTeamReceivesYellowCard"/>

    <Button
        android:id="@+id/home_red_cards_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_yellow_cards_button"
        android:onClick="homeTeamReceivesRedCard"/>

    <TextView
        android:id="@+id/red_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_card"
        app:layout_constraintBottom_toBottomOf="@+id/home_red_cards_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/home_red_cards_button"
        app:layout_constraintRight_toLeftOf="@+id/away_red_cards_button"
        app:layout_constraintTop_toTopOf="@+id/home_red_cards_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/away_red_cards_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/initial_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/away_yellow_cards_button"
        android:onClick="awayTeamReceivesRedCard"/>

    <Button
        android:id="@+id/match_start_text"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/start_match_announcement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="matchStart"/>

    <Button
        android:id="@+id/end_match_text"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/end_match_announcement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/match_start_text"
        app:layout_constraintRight_toLeftOf="@+id/reset"
        android:onClick="matchEnd"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="reset"/>
    int homeScore = 0;
    int awayScore = 0;
    int homeShots = 0;
    int awayShots = 0;
    int homeYellowCards = 0;
    int awayYellowCards = 0;
    int homeRedCards = 0;
    int awayRedCards = 0;



</android.support.constraint.ConstraintLayout>
